@@ -60,6 +60,7 @@ Mantis ChangeLog
  * Fix #3924: Graphs did not show query counts when flag was set.
  * Fix #3926: "Copy Issue" reset date submitted.
  * Fix #3928: "Copy Issue" did not copy attachments (plus other values).
+ * Fix #3937: Custom field filters now only show those values relevant to the selected project.
  * New Config: set_view_status_threshold (default REPORTER) - threshold needed to set the view status while reporting a bug / bugnote.
  * New Config: change_view_status_threshold (default UPDATER) - threshold needed to update the view status while updating a bug / bugnote.
  * New Config: view_handler_threshold (default VIEWER) - threshold needed to view the bug handler (now works for emails only).
